test/invalid-semantics/59809_wrong_while_condition/wrong_while_condition.mag
-- Author: 59809, Manuel Leitão

fun main (_) : Unit -> Unit =
    var i : Int = 5;
    while i do
        i = i - 1